--- a/debian/updatedb.conf
+++ b/debian/updatedb.conf
@@ -12,3 +12,8 @@ export NETPATHS
 # run find as this user
 LOCALUSER="nobody"
 export LOCALUSER
+# cron.daily/find: run at this priority -- higher number means lower priority
+# (this is relative to the default which cron sets, which is usually +5)
+NICE=10
+export NICE
+
