* New patch: 10_updatedb-findopts: Add --findoptions option to updatedb to   pass global options to find. * Set FINDOPTIONS='-ignore_readdir_race' for updatedb.sh's cron-job and stop   redirecting stderr to /dev/null.  (Closes: #245874, #169730)
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@59 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/updatedb.conf
+++ b/debian/updatedb.conf
@@ -1,5 +1,7 @@
 # This file sets environment variables which are used by updatedb
 
+# Global options for invocations of find(1)
+FINDOPTIONS='-ignore_readdir_race'
 # filesystems which are pruned from updatedb database
 PRUNEFS="NFS nfs afs proc smbfs autofs iso9660 ncpfs coda devpts ftpfs devfs mfs shfs sysfs"
 export PRUNEFS
