--- a/debian/updatedb.conf
+++ b/debian/updatedb.conf
@@ -2,6 +2,7 @@
 
 # Global options for invocations of find(1)
 FINDOPTIONS='-ignore_readdir_race'
+export FINDOPTIONS
 # filesystems which are pruned from updatedb database
 PRUNEFS="NFS nfs afs proc smbfs autofs iso9660 ncpfs coda devpts ftpfs devfs mfs shfs sysfs"
 export PRUNEFS
