add Chuan-kai Lin to uploaders
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@79 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: findutils
 Section: base
 Priority: required
 Maintainer: Andreas Metzler <ametzler@debian.org>
+Uploaders: Chuan-kai Lin <cklin@debian.org>
 Build-Depends: texinfo, debhelper (>> 4.0.0), dpatch, autotools-dev
 Standards-Version: 3.6.1
 
