--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: base
 Priority: required
 Maintainer: Andreas Metzler <ametzler@debian.org>
 Uploaders: Chuan-kai Lin <cklin@debian.org>
-Build-Depends: texinfo, debhelper (>> 4.0.0), dpatch, autotools-dev
+Build-Depends: texinfo, debhelper (>> 4.0.0), dpatch, autotools-dev, dejagnu
 Standards-Version: 3.6.1
 
 Package: findutils
