bug closesrs, remove uneeded patch, new configure flag.
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@104 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/rules
+++ b/debian/rules
@@ -34,6 +34,7 @@ config.status: patch-stamp configure
 	CFLAGS="$(CFLAGS)" ./configure \
 		--host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) \
 		--prefix=/usr --localstatedir=/var/cache/locate \
+		--enable-d_type-optimisation \
 		--libexecdir='$${prefix}/lib/locate' \
 		--mandir='$${prefix}/share/man' \
 		--infodir='$${prefix}/share/info'
