update PRUNEFS and PRUNEPATHS
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@106 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/updatedb.conf
+++ b/debian/updatedb.conf
@@ -4,10 +4,10 @@
 FINDOPTIONS='-ignore_readdir_race'
 export FINDOPTIONS
 # filesystems which are pruned from updatedb database
-PRUNEFS="NFS nfs afs proc smbfs autofs iso9660 ncpfs coda devpts ftpfs devfs mfs shfs sysfs"
+PRUNEFS="NFS nfs afs proc smbfs autofs iso9660 ncpfs coda devpts ftpfs devfs mfs shfs sysfs cifs lustre_lite"
 export PRUNEFS
 # paths which are pruned from updatedb database
-PRUNEPATHS="/tmp /usr/tmp /var/tmp /afs /amd /alex /var/spool /sfs"
+PRUNEPATHS="/tmp /usr/tmp /var/tmp /afs /amd /alex /var/spool /sfs /media"
 export PRUNEPATHS
 # netpaths which are added
 NETPATHS=""
