s/Section: base/Section: utils/
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@177 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: findutils
-Section: base
+Section: utils
 Priority: required
 Maintainer: Andreas Metzler <ametzler@debian.org>
 Uploaders: Chuan-kai Lin <cklin@debian.org>
