--- a/debian/updatedb.conf
+++ b/debian/updatedb.conf
@@ -4,7 +4,7 @@
 FINDOPTIONS='-ignore_readdir_race'
 export FINDOPTIONS
 # filesystems which are pruned from updatedb database
-PRUNEFS="NFS nfs nfs4 afs proc smbfs autofs iso9660 ncpfs coda devpts ftpfs devfs mfs shfs sysfs cifs lustre_lite"
+PRUNEFS="NFS nfs nfs4 afs binfmt_misc proc smbfs autofs iso9660 ncpfs coda devpts ftpfs devfs mfs shfs sysfs cifs lustre_lite tmpfs usbfs"
 export PRUNEFS
 # paths which are pruned from updatedb database
 PRUNEPATHS="/tmp /usr/tmp /var/tmp /afs /amd /alex /var/spool /sfs /media"
