Do not run testsuite when cross-compiling.
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@195 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@ include /usr/share/dpatch/dpatch.make
 export DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 export DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
-ifeq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
+ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
 	confflags += --build $(DEB_HOST_GNU_TYPE)
 else
 	confflags += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
@@ -51,8 +51,9 @@ build-stamp:  config.status
 
 	# Add here commands to compile the package.
 	$(MAKE)
+ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
 	$(MAKE) check
-
+endif
 	touch build-stamp
 
 clean: clean1 unpatch
