--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: utils
 Priority: required
 Maintainer: Andreas Metzler <ametzler@debian.org>
 Uploaders: Chuan-kai Lin <cklin@debian.org>
-Build-Depends: texinfo, debhelper (>> 4.0.0), dpatch, autotools-dev, dejagnu
+Build-Depends: texinfo, debhelper (>= 7.0.15), dpatch, autotools-dev, dejagnu
 Standards-Version: 3.8.0
 Vcs-Svn: svn://svn.debian.org/svn/pkg-findutils/trunk
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-findutils/trunk/
