--- a/debian/rules
+++ b/debian/rules
@@ -48,8 +48,10 @@ build-stamp:  config.status
 
 	# Compile the package.
 	$(MAKE)
+ifeq ($(filter nocheck,$(DEB_BUILD_OPTIONS)),)
 ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
 	$(MAKE) check
+endif
 endif
 	touch build-stamp
 
