Stop suggesting slocate, it has been removed from the archive. #565653
git-svn-id: svn://anonscm.debian.org/svn/pkg-findutils/trunk@347 5eb6d891-0dfb-0310-89f2-b2869adce466

--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Architecture: any
 Essential: yes
 Pre-Depends: ${shlibs:Depends}
 Depends: ${misc:Depends}
-Suggests: mlocate|locate|slocate
+Suggests: mlocate|locate
 Description: utilities for finding files--find, xargs
  GNU findutils provides utilities to find files meeting specified
  criteria and perform various actions on the files which are found.
