--- a/debian/rules
+++ b/debian/rules
@@ -5,9 +5,6 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# Include dpatch stuff.
-include /usr/share/dpatch/dpatch.make
-
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
 export DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -24,7 +21,7 @@ CFLAGS += -Wall
 LDFLAGS := `dpkg-buildflags --get LDFLAGS`
 CPPFLAGS := `dpkg-buildflags --get CPPFLAGS`
 
-config.status: patch-stamp configure
+config.status: configure
 	rm -f config.guess config.sub
 	ln -s /usr/share/misc/config.sub /usr/share/misc/config.guess .
 
@@ -52,8 +49,7 @@ endif
 endif
 	touch build-stamp
 
-clean: clean1 unpatch
-clean1:
+clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp 
