--- a/debian/rules
+++ b/debian/rules
@@ -22,8 +22,8 @@ LDFLAGS := `dpkg-buildflags --get LDFLAGS`
 CPPFLAGS := `dpkg-buildflags --get CPPFLAGS`
 
 config.status: configure
-	rm -f config.guess config.sub
-	ln -s /usr/share/misc/config.sub /usr/share/misc/config.guess .
+	rm -vf build-aux/config.guess build-aux/config.sub
+	ln -s /usr/share/misc/config.sub /usr/share/misc/config.guess build-aux/
 
 	dh_testdir
 	# Configure the package.
@@ -56,7 +56,7 @@ clean:
 
 	# Add here commands to clean up after the build process.
 	[ ! -f Makefile ] || $(MAKE) distclean
-	rm -f config.guess config.sub doc/find.info*
+	rm -vf build-aux/config.guess build-aux/config.sub doc/find.info*
 	dh_clean
 
 install: build
