--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: utils
 Priority: required
 Maintainer: Andreas Metzler <ametzler@debian.org>
 Uploaders: Chuan-kai Lin <cklin@debian.org>
-Build-Depends: texinfo, debhelper (>= 7.0.15), autotools-dev, dejagnu
+Build-Depends: texinfo, debhelper (>= 7.0.15), autotools-dev, dejagnu,
+ bison
 Standards-Version: 3.8.1
 Vcs-Svn: svn://svn.debian.org/svn/pkg-findutils/trunk
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-findutils/trunk/
